sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:27: error: value or is not a member of Boolean
	}while(ech1 or ech2);
                    ^