sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
	var debut=0; var fin = getNombreValeurs()-2;
	var ech1 = false; var ech2 = false;
	do {
		ech1 = false; ech2 = false;
		for(i<-debut to fin) {
			if(plusPetit(i+1, i)) {
				echange(i, i+1);
				ech1 = true;
			}
		}
		if(ech1 == false) {
			return;
		}
		fin-=1;
		for(i<-fin to debut by -1) {
			if(plusPetit(i+1, i)) {
				echange(i, i+1);
				ech2 = true;
			}
		}
		if(ech2 == false) {
			return;
		}
		debut+=1;
	}while(ech1 or ech2);
}